<?xml version="1.0" encoding="utf-8"?>
	<PreferenceScreen
	  xmlns:android="http://schemas.android.com/apk/res/android">
		<PreferenceCategory android:title="Debugging Values">
		    <ListPreference android:key="HeartbeatFrequency"
				android:defaultValue="@string/default_heartbeatfrequency_value"
				android:title="@string/defaulthearbeatfrequency_title_list_preference"
				android:summary="@string/heartbeatfrequency_summary_list_preference"
				android:entries="@array/heartbeat_list_preference" 
				android:entryValues="@array/heartbeatvalues_list_preference"
				android:dialogTitle="@string/heartbeat_dialog_title_list_preference" />
		    <ListPreference
		            android:key="LoggingLevel"
		            android:defaultValue="@string/default_logginglevel_value"
		            android:title="@string/defaultlogging_title_list_preference"
		            android:summary="@string/logging_summary_list_preference"
		            android:entries="@array/logging_preferences"
		            android:entryValues="@array/loggingvalues_preferences"
		            android:dialogTitle="@string/logging_dialog_title_list_preference" />
		</PreferenceCategory>
</PreferenceScreen>

