<?xml version="1.0" encoding="utf-8"?>
	<PreferenceScreen
	  xmlns:android="http://schemas.android.com/apk/res/android">	    	  	
		 <CheckBoxPreference
		 	android:defaultValue="true"
		 	android:key="vibrate"
		 	android:title="Vibrate on Alert"
		 	android:summary="Check this box if you want your phone to vibrate when you are notified."
		 ></CheckBoxPreference>
	    <ListPreference
            android:key="soundtype"
            android:defaultValue="0"
            android:title="Sound Type"
            android:summary="Select the type of audio alert"
            android:entries="@array/soundtype_preferences"
            android:entryValues="@array/soundtypevalues_preferences"
            android:dialogTitle="Sound Type" />
		  <PreferenceScreen android:summary="These settings have to do with notification parameters which help you tailor the app to suit your particular driving conditions."
		    android:title="Advanced Settings">
		    <PreferenceCategory android:title="Timing" >
			  <EditTextPreference
			      android:key="stoptime"
			      android:defaultValue="7"
			      android:title="Stop Time in Minutes"
			      android:summary="After driving, if you are stopped for this amount of time, you will receive an alert"
			  ></EditTextPreference>
		        		        
		    </PreferenceCategory>
			<PreferenceCategory android:title="Activity Recognition" >		    
			    <ListPreference android:key="HeartbeatFrequency"
					android:defaultValue="@string/default_heartbeatfrequency_value"
					android:title="@string/defaulthearbeatfrequency_title_list_preference"
					android:summary="@string/heartbeatfrequency_summary_list_preference"
					android:entries="@array/heartbeat_list_preference" 
					android:entryValues="@array/heartbeatvalues_list_preference"
					android:dialogTitle="@string/heartbeat_dialog_title_list_preference" />
			<EditTextPreference
			      android:key="confidencepercentage"
			      android:defaultValue="@string/defaultconfidence"
			      android:title="In Vehicle Confidence Percentage."
			      android:summary="How confident your phone must be to determine that you are driving"
			  ></EditTextPreference>
		     <ListPreference android:key="invehiclethreshhold"
				android:defaultValue="@string/defaultinfrequencythreshhold"
				android:title="@string/invehiclethreshholdtitle"
				android:summary="@string/invehiclesummary"
				android:entries="@array/invehiclethreshholdpossiblevaluesdescriptions" 
				android:entryValues="@array/invehiclethreshholdpossiblevalues"
				android:dialogTitle="@string/invehiclethreshholdtitle" />
			</PreferenceCategory>		    		 	
	    <PreferenceCategory android:title="System">
		    <ListPreference
	            android:key="LoggingLevel"
	            android:defaultValue="@string/default_logginglevel_value"
	            android:title="@string/defaultlogging_title_list_preference"
	            android:summary="@string/logging_summary_list_preference"
	            android:entries="@array/logging_preferences"
	            android:entryValues="@array/loggingvalues_preferences"
	            android:dialogTitle="@string/logging_dialog_title_list_preference" />
		  <CheckBoxPreference
			  	android:key="key_simulation"
			  	android:defaultValue="false"
			  	android:title="Driving/Stopping Simulator"
			  	android:summary="Want to test out your changes without stepping into the vehicle? Turn this on and the app will simulate driving conditions for a few moments, and then stopping conditions. It will continue to cycle until this setting is turned off"
		  ></CheckBoxPreference>
		</PreferenceCategory>
	</PreferenceScreen>
	    		
</PreferenceScreen>

